--- a/templates/restaurant.html
+++ b/templates/restaurant.html
@@ -36,7 +36,8 @@
   <option value =1>Poor</option>
   <option value=2>Okay</option>
   <option value=3>Excellent</option>
-</select>
+</select><br>
+<input type="file" name="photo" accept="image/*"><br>
 <input type="submit" value="Send" />
 </form>
 </section> 
