--- a/templates/registration.html
+++ b/templates/registration.html
@@ -7,6 +7,7 @@
 
 {% block head_block %}
 	<link rel="stylesheet" type="text/css" href="{% static "CSS/Registration.css" %}"/>
+	<script src="{% static "js/password.js" %}"></script>
 {% endblock %}
 
 {% block body_block %}
@@ -18,7 +19,7 @@
 		<div class="registration">
 		<H1 class="center">Create your EatGlasgow Account</H1>
 		<form id="user_form" method="POST" action="{% url 'registration' %}"
-			enctype="multipart/form-data">
+			enctype="multipart/form-data" onsubmit="return checkForm(this);">
 			
 			{% csrf_token %}
 			<p>Please enter your details.</p>
