--- a/templates/test.html
+++ b/templates/test.html
@@ -1,16 +1,26 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
-
-{% block title_block %}
-    EatGlasgow
-{% endblock %}
-{% block head_block %}
-    <script type="text/javascript" src="{% static "js/search.js" %}"></script>
-{% endblock %}
-
-{% block body_block %}
-<form action=""> 
-	<input id="other" type="text" name="search" placeholder="Type here..." onkeyup="search(this.value)">
+<!DOCTYPE html>
+<html>
+<body>
+<p>请输入两个数字</p>
+<form action="/add/" method="get">
+    a: <input type="text" id="a" name="a"> <br>
+    b: <input type="text" id="b" name="b"> <br>
+    <p>result: <span id='result'></span></p>
+    <button type="button" id='sum'>提交</button>
 </form>
-	<div id="searchResult"><div>
-{% endblock %}
+ 
+<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+      $("#sum").click(function(){
+        var a = $("#a").val();
+        var b = $("#b").val();
+ 
+        $.get("/add/",{'a':a,'b':b}, function(ret){
+            $('#result').html(ret)
+        })
+      });
+    });
+</script>
+</body>
+</html>
