--- a/templates/test.html
+++ b/templates/test.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p>请输入两个数字</p>
+<p>Input</p>
 <form action="/add/" method="get">
     a: <input type="text" id="a" name="a"> <br>
     b: <input type="text" id="b" name="b"> <br>
     <p>result: <span id='result'></span></p>
-    <button type="button" id='sum'>提交</button>
+    <button type="button" id='sum'>Submmit</button>
 </form>
  
 <script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
