--- a/templates/test.html
+++ b/templates/test.html
@@ -34,11 +34,11 @@ xmlhttp.send();
 </head>
 <body>
 
-<h3>请在下面的输入框中键入字母（A - Z）：</h3>
+<h3>Input spme word（A - Z）：</h3>
 <form action=""> 
-姓氏：<input type="text" id="txt1" onkeyup="showHint(this.value)" />
+Keyword<input type="text" id="txt1" onkeyup="showHint(this.value)" />
 </form>
-<p>建议：<span id="txtHint"></span></p> 
+<p>result：<span id="txtHint"></span></p>
 
 </body>
 </html>
