--- a/templates/addRestaurant.html
+++ b/templates/addRestaurant.html
@@ -1,64 +1,20 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% block title_block %}
-	<H2>Add Restaurant</H2>
-{% endblock %}
-
+{% block title_block %} Add Restaurant {% endblock %}
 
 	<link rel="stylesheet" type="text/css" href="{% static "CSS/AddRestaurant.css" %}" />
 
-<div>
 {% block body_block %}
-	<form action="{% url 'addRestaurant' %}" id="addRestaurant_form" enctype="multipart/form-data">
-	<table>
-	<tr>
-		<td>Restaurant Name: </td>
-		<td><input type="text" name="Restaurant Name"></td>
-	</tr>
-	<tr>
-		<td>Cuisine: </td>
-		<td>
-			<select>
-				<option>WS, Western</option>
-				<option>As, Asian</option>
-				<option>ME, Middle Eastern</option>
-			</select>
-		</td>
-	</tr>
-	<tr>
-		<td>Adress: </td>
-		<td><input type="text" name="Adress"></td>
-	</tr>
-	<tr>
-		<td>Price Range: </td>
-		<td>
-			<select>
-				<option>0, Not Rated</option>
-				<option>1, Low Price</option>
-				<option>2, Affordable</option>
-				<option>3, Fancy</option>
-			</select>
-		</td>
-	</tr>
-	<tr>
-		<td>Opening Hours: </td>
-		<td><input type="text" name="Opening Hours"></td>
-	</tr>
-	<tr>
-		<td>Status: </td>
-		<td>
-			<select>
-				<option>1, Stored</option>
-				<option>0, Deleted</option>
-				<option>-1, Closed</option>
-			</select>
-		</td>
-	</tr>
-	
-	</table>	
-	</form>
-	<input type="submit" name="submit" value="Add Restaurant">
-</div>
+	<div>
+		<H2>Add Restaurant</H2>
+		<form action="{% url 'addRestaurant' %}" id="addRestaurant_form" enctype="multipart/form-data", 
+		method="POST", >
+			<table>
+				{{addRestaruant_form.as_table}}
+			</table>	
+			<input type="submit" name="submit" value="Add Restaurant">
+		</form>
+	</div>
 
 {% endblock %}
